# SnakeBattleRoyale

./: CMakeLists.txt  README.md
src/: AutoSnake.hpp  Entity.hpp  Food.hpp  Game.hpp  Router.hpp  Snake.hpp  autosnake.cpp  entity.cpp  food.cpp  game.cpp  main.cpp  router.cpp  snake.cpp
